# ncobayn_actix

./: Cargo.toml  Makefile
src/: main.rs
src/api/: user_api.rs
src/configurations/: auth.rs  database.rs
src/controllers/auth_controllers/: login_controller.rs  mod.rs  refresh_token_controller.rs  register_controller.rs
src/models/: mod.rs  url.rs  user.rs  user_model.rs
src/repositories/: mod.rs
src/repositories/auth_repositories/: auth_repos.rs  login_repository.rs  mod.rs  refresh_token_repository.rs  register_repository.rs
src/repositories/profile_repositories/: get_profile_repository.rs  mod.rs  profile_repos.rs
src/repository/: mongodb_repo.rs
src/request/: auth_request.rs
src/response/: error_response.rs  login_response.rs  mod.rs
src/routes/: auth_routes.rs
src/schemas/requests/: auth_requests.rs
src/schemas/responses/: auth_responses.rs
src/services/: mod.rs
src/services/auth_services/: login_service.rs  mod.rs  refresh_token_service.rs  register_service.rs
src/services/profile_services/: mod.rs
src/validations/: auth_validation.rs  mod.rs
