[package]
name = "actix-mongo-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
env_logger = "0.9.0"
jsonwebtoken = "7.1"
# sha256 = "1.1.3"
sha2 = "0.10.7"
chrono = "0.4.28"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]